# bmktventures_stock_app

./: .gitignore  News + adds.ipynb  News Ticker List - WIP.ipynb  News v2+.ipynb  News v2+.py  README.md  news.ipynb  news.py  pyproject.toml  requirements.txt
