[tool.poetry]
name = "bmktventures_stock_app"
version = "0.1.0"
description = ""
authors = ["mktcowboy <bmktventures@gmail.com>"]
readme = "README.md"
packages = [{include = "bmkventures_stock_app"}]

[tool.poetry.dependencies]
python = "^3.11"
ipynb-py-convert = "^0.4.6"
pandas = "^2.0.0"
yahoo-fin = "^0.8.9.1"

[tool.poetry.group.dev.dependencies]
icecream = "^2.1.3"
ipython = "^8.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
